# webnavix

./: .dockerignore  .env.example  .gitignore  .mypy.ini  LICENSE  README.md  lefthook.yaml  pyproject.toml  ruff.toml  webnavix.code-workspace
.devcontainer/: devcontainer.json
.github/workflows/: app-test.yaml
docker/: Dockerfile.cloud-machine  Dockerfile.development  docker-compose.development.yaml
paper/font/: ヒラギノ角ゴシック W0.ttc  ヒラギノ角ゴシック W7.ttc  ヒラギノ角ゴシック W8.ttc  ヒラギノ角ゴシック W9.ttc
paper/graduation-preprint/: main.typ  ref.bib
paper/graduation-preprint/template/: head.typ  template.typ
paper/ipsj/: main.typ
paper/ipsj/template/: head.typ  template.typ  util.typ
src/: dataset.py
src/llama/: analysis.py  build.py  eval.py  merge.py  processing.py  train.py
src/llama/conf/: config.yaml
src/llama/conf/accelerate/: deepspeed.yaml  fsdp.yaml
src/llama/conf/deepspeed/: zero2.json
src/llama/conf/mergekit/: config.yaml
src/llama/conf/variant/: analysis.yaml  base.yaml  expert.yaml  merge.yaml  moe.yaml
