[project]
name = "webnavix"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "shio", email = "85730998+dino3616@users.noreply.github.com" },
]
dependencies = [
    "accelerate>=0.32.1",
    "backoff>=2.2.1",
    "bert-score>=0.3.13",
    "bitsandbytes>=0.42.0",
    "coloredlogs>=15.0.1",
    "datasets>=2.20.0",
    "huggingface-hub>=0.24.5",
    "hydra-core>=1.3.2",
    "lxml>=5.2.2",
    "ninja>=1.11.1.1",
    "numpy>=1.26.4",
    "openai>=1.35.15",
    "optimum>=1.21.2",
    "packaging>=24.1",
    "pandas>=2.2.2",
    "peft>=0.11.1",
    "pillow>=10.4.0",
    "sacrebleu>=2.4.2",
    "sentence-transformers>=3.0.1",
    "setuptools>=71.1.0",
    "tensorboardx>=2.6.2.2",
    "tiktoken>=0.7.0",
    "torch>=2.3.1",
    "tqdm>=4.66.4",
    "transformers>=4.42.4",
    "trl>=0.9.6",
    "weblinx>=0.3.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[tool.rye]
managed = true
dev-dependencies = ["ruff>=0.5.3", "lefthook>=0.1.2"]

[tool.rye.scripts]
check = { chain = ["lint", "lint:type", "fmt"] }
"lint" = "ruff check ./ --diff"
"lint:type" = "mypy ./ --explicit-package-bases"
"fmt" = "ruff fmt ./"
